2008-08-06  Daniel Eddeland <danedde@svn.gnome.org>

	Merged 26402:26609 from trunk

2008-08-06  Daniel Eddeland <danedde@svn.gnome.org>

	* app/tools/gimptexttool.c
	* app/tools/gimptexttool.h: Input methods and bug fixing.

2008-08-06  Daniel Eddeland <danedde@svn.gnome.org>

	Merged 26051:26401 from trunk

2008-08-06  Daniel Eddeland <danedde@svn.gnome.org>

	* app/tools/gimptexttool.c
	* app/tools/gimptexttool.h
	* app/actions/text-tool-actions.c
	* app/actions/text-tool-commands.c
	* app/actions/text-tool-commands.h: Continued working on
	context-sensitive menu and clipboard actions etc.

2008-08-03  Daniel Eddeland <danedde@svn.gnome.org>

	* app/tools/gimptoolcontrol.h
	* app/tools/gimptexttool.c
	* app/tools/gimptexttool.h
	* app/tools/gimptoolcontrol.c
	* app/menus/menus.c
	* app/actions/actions.c
	* app/actions/Makefile.am
	* app/display/gimpdisplayshell-callbacks.c
	* app/actions/text-tool-actions.c
	* app/actions/text-tool-actions.h
	* app/actions/text-tool-commands.c
	* app/actions/text-tool-commands.h
	* menus/Makefile.am: added a context-sensitive right-click menu for
	text-tool. Still work in progress

2008-07-26  Daniel Eddeland <danedde@svn.gnome.org>

	* app/tools/gimptexttool.c: continued working on the text-cursor.

2008-07-25  Daniel Eddeland <danedde@svn.gnome.org>

	* app/display/gimpdisplayshell-callbacks.c
	* app/text/gimptext-bitmap.c
	* app/text/gimptextlayer.c
	* app/tools/gimptoolcontrol.c
	* app/tools/gimptoolcontrol.h
	* app/tools/gimptexttool.c
	* app/tools/gimptexttool.h
	* app/tools/gimprectangletool.c
	* app/tools/gimprectangletool.h: removed text-editor dialog, added
	on-canvas text-input and a temporary text cursor, and related things.

2008-07-05  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-vectors.c: fixed some formatting.

2008-07-04  Daniel Eddeland <danedde@svn.gnome.org>

	* app/text/gimptext-vectors.c: fixed text formatting and a bug adding
	an empty point at the end of some paths.
